crates/harness-monitor/src/snapshots/harness_monitor__tui__tests__routa_watch_tui_compact.snap
---
source: crates/harness-monitor/src/tui_tests.rs
assertion_line: 669
expression: "render_snapshot(&state, &mut cache, 96, 24)"
---
routa.js  2 dirty  1 unattributed  loc: --  transport: socket
┌Git Status───────────────────────────────────────────────────────┐┌Diff Preview───────────────┐
│ 2 files, 0 untracked, 5 commits, 1 agent, branch: main, 2 worktr││@@ -1,2 +1,3 @@            │
│─────────────────────────────────────────────────────────────────││-use old                   │
│> tui.rs                                                         ││+use new                   │
│  ...s-monitor/src  M  +38 -5     4m                             ││+use cache                 │
│  route.ts                                                       ││                           │
│  .../api/a2a/card  D  -12        5m                             ││                           │
│                                                                 ││                           │
│                                                                 ││                           │
│                                                                 ││                           │
│                                                                 ││                           │
│                                                                 ││                           │
└─────────────────────────────────────────────────────────────────┘└───────────────────────────┘
┌Fitness (Entrix Fast)────────────────────────────────────────────┐┌File Detail────────────────┐
│Score: PASS 91.0% (0/12) 4200ms                                  ││tui.rs                     │
│Dimension scores:                                                ││...es/harness-monitor/src  │
│92% code_quality           w18  4/4  █████████████████████████░░ ││Lines: ...  Size: ...  Git │
│95% api_contract           w10  2/2  ██████████████████████████░ ││changes: ...               │
│                                                                 ││                           │
│                                                                 ││                           │
│                                                                 ││                           │
└─────────────────────────────────────────────────────────────────┘└───────────────────────────┘
↑↓ select  S run sort  v run filter  u unknown  d preview  Pg scroll  g refresh fitness  m fast/
