crates/harness-monitor/src/snapshots/harness_monitor__tui__tests__routa_watch_tui_search.snap
---
source: crates/harness-monitor/src/tui_tests.rs
assertion_line: 647
expression: "render_snapshot(&state, &mut cache, 120, 24)"
---
routa.js  1 dirty  1 unattributed  loc: --  fitness: fast  transport: socket
┌Git Status──────────────────────────────────────────────────────────────────────────┐┌Diff Preview────────────────────┐
│ 1 file, 0 untracked, 5 commits, 1 agent, branch: main, 2 worktrees                 ││@@ -1,2 +1,3 @@                 │
│────────────────────────────────────────────────────────────────────────────────────││-use old                        │
│> route.ts                                      card/            D  -12        5m   ││+use new                        │
│                                                                                    ││+use cache                      │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
└────────────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────┘
┌Fitness (Entrix Fast)───────────────────────────────────────────────────────────────┐┌File Detail─────────────────────┐
│Score: PASS 91.0% (0/12) 4200ms                                                     ││route.ts                        │
│Dimension scores:                                                                   ││src/app/api/a2a/card            │
│92% code_quality           w18  4/4  ██████████████████████████░░                   ││Lines: ...  Size: ...  Git      │
│95% api_contract           w10  2/2  ███████████████████████████░                   ││changes: ...                    │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
└────────────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────┘
Tab Runs/Files/Detail/Fitness  ↑↓ select  S run sort  v run filter  u unknown  d preview/diff  Pg scroll  f follow:on  T
